--- a/netflix/src/Banner.css
+++ b/netflix/src/Banner.css
@@ -1,13 +1,14 @@
 header{
-    min-height: 450px;
+    height: 450px;
     display: flex;
     align-items: center;
     position: relative;
+    margin-bottom: 2rem;
 }
 .banner__contents{
     max-width: 40rem;
     color: white;
-    
+    margin-top: 2rem;
     padding: 1rem;
 }
 
@@ -15,6 +16,10 @@ header{
     line-height: 1.3;
     margin-top: 1rem;
     font-size: .8rem;
+}
+
+.banner__buttons{
+    padding-top: 1rem;
 }
 
 .banner__button {
@@ -46,3 +51,12 @@ header{
     position: absolute;
     bottom: 0;
   }
+
+  @media only screen and (max-width: 600px) {
+ header{
+     max-height: 350px;
+ }
+ .banner--fadeBottom {
+     height: 4rem;
+ }
+    }
